Added a nicer frontpage for the manual.

--- a/manual/gs-manual.tex
+++ b/manual/gs-manual.tex
@@ -1,13 +1,11 @@
 \documentclass[11pt,a4paper,oneside]{report}
 
 \input{packages.tex}
-
-\title{CWIS Ground Software User Reference Manual}
-\author{Olivier Desenfans}
+\input{frontpage.tex}
 
 \begin{document}
 
-\maketitle
+\titleGM
 
 \tableofcontents
 
